<resources>
    <string name="app_name">Afya Mtaani</string>
    <string name="select_geolocation_category">Select Geolocation</string>
    <string name="national_disease_burden">National Disease Burden</string>
    <string name="regional_disease_burden">Regional Disease Burden</string>
    <string name="disease_name">Disease Name</string>
    <string name="symptoms">Symptoms</string>

    <string name="lorem_ipsulum_text">
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in congue magna. Duis eu posuere nisi. Suspendisse dapibus ex id sapien dapibus semper. Etiam venenatis quis libero a euismod. Sed viverra dictum erat, ut ornare ante cursus nec. Aenean ornare dui ipsum, non facilisis nulla hendrerit sed. Nulla malesuada odio sem, non tempor lacus eleifend id. Nunc non lacus nisl. Praesent pharetra, neque nec suscipit semper, quam tortor iaculis odio, eget accumsan risus sapien vitae nunc. Suspendisse facilisis mauris tristique, dignissim lorem vitae, dictum libero. Praesent consectetur neque a consequat laoreet.

    </string>
    <string name="prevention_title_text">
        Prevention
    </string>
    <string name="treatment_title">Treatment</string>
    <string name="patient_data_title">Patient Data</string>
    <string name="age_text">Age</string>
    <string name="gender">Gender</string>
    <string name="locality">Locality</string>
    <string name="illness_duration">Illness Duration</string>
    <string name="other_diseases_text">Any other pre-existing condition(s)</string>
    <string name="diabetes">Diabetes</string>
    <string name="hypertension">Hypertension</string>
    <string name="cancer">Cancer</string>
    <string name="blood_disorders_text">Blood disorders like sickle cell, hemophilia</string>
    <string name="activity">Activity</string>
    <string name="diseases">Diseases</string>
    <string name="data_input">Data Input</string>
    <string name="call">Call</string>
    <string name="nyeri_referral_hospital">Nyeri Referral Hospital</string>
    <string name="notes">Notes</string>
    <string name="others">Others</string>
    <string name="image_of_user">Image of user.</string>
    <string name="weekly_interactions">Weekly Interactions</string>
    <string name="interactions">Interactions: </string>
    <string name="daily_interactions">Daily Interactions</string>
    <string name="monthly_interactions">Monthly Interactions</string>
    <string name="counties">Counties</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="profile_image">Image of User</string>
    <string name="select_image">Select Image</string>
    <string name="submit">Submit</string>
    <string name="chw_name">Rosemary Wanjala</string>
    <string name="mombasa_kisauni">Mombasa, Kisauni</string>
    <string name="help_lines">Help Lines</string>
    <string name="maluki_muthusi">Maluki Muthusi</string>
    <string name="logout">Logout</string>
    <string name="download">Download</string>
    <string name="top_national_disease_burden">Top National Disease Burden</string>
    <string name="county_disease_burden">County Disease Burden</string>

    <string-array name="gender_array">
        <item>Female</item>
        <item>Male</item>
    </string-array>
</resources>